# cps5802AgentPV

./: .env.example  .gitignore  README.md  docker-compose.yml  membersname.txt  projectdesignrules.cursorrules  pyproject.toml  requirements.txt
agent/: README.md
agent_eval/: README.md  __init__.py  __main__.py  benchmark.json  heuristic_rubric.py  llm_judge.py  runner.py  scenarios.py  wiring.py
api/: README.md  __init__.py  agent_service.py  edge_service.py  errors.py  schemas.py
configs/: README.md  base.yaml  dev.yaml  prod.yaml  settings.py  test.yaml
dashboard/: README.md  app.py  data.py  i18n.py  inject.py
docker/: agent.Dockerfile  dashboard.Dockerfile  edge.Dockerfile  orchestrator.Dockerfile
docs/: AgentPV-项目方案.md  Dashboard Demo Guide.md  Document Interpretation.md  Q&A.md  README.md  Reproducibility Guide.md  alert_schema.json  assignmenchinese.md  assignment.md  data_card.md  ppt制作指南.md  ppt旁白.md  复现指南.md  开发记录.md  文件解读.md  网页演示指南.md
evaluation/: README.md  __init__.py  __main__.py  classification_report.py  compare_variants.py  confusion_matrix.py  figures.py  latency_benchmark.py  metrics.py  model_size.py  predictor.py  pytorch_runner.py  robustness.py  runner.py
inference/: README.md  onnx_runner.py  postprocess.py
models/: README.md  base.py  cnn1d.py
orchestrator/: README.md  __main__.py  clients.py  event_log.py  node_simulator.py  orchestrator.py
quantization/: README.md  int8_static.py  onnx_export.py
rag/: README.md  chroma_retrieval.py  chunking.py  embedding.py  ingest.py  prompting.py  reranking.py  retrieval.py
reports/: AgentPV_Final_Presentation.pptx  agent_eval.md  agent_eval_artifact_meta.json  edge_onnx_build_meta.json  final_report.md  integration_eval.md  integration_eval_meta.json  model_eval.md  robustness_eval.md
requirements/: agent.txt  base.txt  dashboard.txt  dev.txt  ml.txt
scripts/: README.md  _count_agent_eval_signals.py  bootstrap_kb_documents.py  demo_fault_injection.py  e2e_latency_bench.py  extract_presentation_narration.py  render_final_report.py  (+5 more)
(+103 files in other folders)
