[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentpv"
version = "0.1.0"
description = "AgentPV: Cloud-edge intelligent monitoring system for PV solar and battery storage."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "AgentPV Team" }]
license = { text = "Academic Use Only" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

# Loose lower bounds; pin exact versions in a generated requirements.lock when shipping.
dependencies = [
    "pydantic>=2",
    "pydantic-settings>=2",
    "pyyaml>=6",
    "python-dotenv>=1",
    "numpy>=1.24",
    "pandas>=2",
    "scipy>=1.10",
    "pvlib>=0.10",
    "torch>=2.1",
    "onnx>=1.15",
    "onnxruntime>=1.16",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "tenacity>=8.2",
    "langchain>=0.1",
    "langchain-community>=0.0.20",
    "chromadb>=0.4",
    "sentence-transformers>=2.5",
    "streamlit>=1.30",
    "jinja2>=3.1",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "api*",
    "agent*",
    "agent_eval*",
    "configs*",
    "dashboard*",
    "evaluation*",
    "inference*",
    "models*",
    "orchestrator*",
    "quantization*",
    "rag*",
    "simulation*",
    "tools*",
    "training*",
    "utils*",
]
exclude = ["tests*", "scripts*", "docs*", "data*", "reports*", "docker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
addopts = "-q --strict-markers"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP"]
ignore = ["E501"]
